<resources>
    <string name="app_name">Therapio</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="device_description">Detect the likelihood of depression based on phone calls analysis and sensor data analysis</string>
    <string name="device_admin_label">Therapio, an app for depression detection through data collection</string>
    <string name="sensing_start">START SENSING</string>
    <string name="sensing_stop">STOP SENSING</string>
    <string name="rudepressed">Depressed ?</string>
    <string name="collectingData">Collecting data ...</string>
    <string name="feeling">Feeling</string>
    <string name="intro">Detecting the likelihood of developing depression
                through patient phone calls and activity analysis.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="accessLocation">Therapio LOCATION access</string>

    <!-- Menu -->
    <string name="action_info">Info</string>
    <string name="action_welcome">Show Welcome</string>
    <string name="action_logout">Logout</string>
    <string name="action_questionnaire">Take Questionnaire</string>

    <!-- Inputs active detection -->
    <string name="appetiteQ">How is your appetite today ?</string>
    <string name="sleepQ">How was your night, slept well ?</string>
    <string name="moodQ">How is your mood today ?</string>
    <string name="DrugQ">How was Your consumption of tobacco and Alcohol or other substances this week ?</string>
    <string name="WeightQ">Did your weight change ?</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="Hight">High</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="surprise">Surprise</string>
    <string name="fear">Fear</string>
    <string name="disgust">Disgust</string>
    <string name="send">SUBMIT</string>

    <string name="NO_INTERNET">OUPS! No Internet Connexion</string>
    <string name="PLZ_CONNECT">Please check your internet connexion to fully use Therapio</string>

    <!-- Welcome page headers -->
    <string name="welcome_header_0">Therapio</string>
    <string name="welcome_header_1">Voice features extraction</string>
    <string name="welcome_header_2">Activity recognition</string>
    <string name="welcome_header_3">I Agree</string>


    <!-- Welcome page text content -->
    <string name="welcome_content_0">Therapio is an app that predict the likelihood of developing depression</string>
    <string name="welcome_content_1">Analyzing voice through phone calls, all you have to do is make your calls normally.</string>
    <string name="welcome_content_2">Analyzing sensors data to get an idea about how active you are.</string>
    <string name="welcome_content_3">If you are using this application it means you agree to the app terms and conditions, your data is secured and granted only for research\'s sake.</string>


    <string name="title_activity_beginner">Beginner</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>


    <!--
    Login and Register
-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_name">Nom complet</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Pas encore inscrit? Creer un compte.</string>
    <string name="btn_link_to_login">Deja inscrit! Log in.</string>
    <string name="welcome">Bienvenue</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name"></string>
    <string name="hint_age">Age</string>


    <!-- Facebook app ID -->
    <string name="facebook_app_id">1643122216003290</string>


    <!-- InfoActivity -->
    <string name="title_activity_info">Information</string>

    <!-- License -->
    <string name="isc_license">
        <![CDATA[<html>
        <p>
        No License
        </p>
        </html>]]>
    </string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="greetings">Hello</string>
    <string name="WhatsGoin">A propos ?</string>
    <string name="title_activity_questionnaire">Questionnaire Beck</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_beginners">BDI</string>

</resources>
