<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ahmed.ui.ResultActivityAppetite">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView3"
        android:textSize="24sp"
        android:text="@string/WeightQ" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <RadioButton
            android:id="@+id/radiogood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hight"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radionotbad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal" />

        <RadioButton
            android:id="@+id/radiobad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low" />

    </RadioGroup>

    <Button
        android:text="@string/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="63dp"
        android:id="@+id/button3"
        android:textSize="24sp"
        style="@style/Widget.AppCompat.Button.Colored" />
</RelativeLayout>
