<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ahmed.therapiodatafordepression.MainActivity">

    <Button
        android:id="@+id/StartSensingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSensingButtonClickedToStart"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="90dp"
        android:text="@string/sensing_start"
        android:background="#c828d977"
        android:textColor="@color/cardview_light_background" />
    <Button
        android:id="@+id/StopSensingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSensingButtonClickedToStop"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="41dp"
        android:text="@string/sensing_stop"
        android:textColor="@color/cardview_light_background"
        android:background="#c8ff5c5c" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rudepressed"
        android:fontFamily="casual"
        android:id="@+id/textView3"
        android:textSize="35sp"
        android:textColor="@color/lightRed"
        android:layout_marginTop="154dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/letsfindout"
        android:id="@+id/textView4"
        android:fontFamily="casual"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/feeling"
        android:id="@+id/textView5"
        android:layout_marginTop="120dp"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_marginRight="10dp"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:fontFamily="casual"/>

    <!--    <android.support.v7.widget.RecyclerView
            android:layout_alignParentTop="true"
            android:layout_above="@id/sensingButton"
            android:id="@+id/recyclerView"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>-->

</RelativeLayout>
