<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.example.ahmed.ui.ResultActivityAppetite">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView3"
        android:textSize="24sp"
        android:text="@string/moodQ" />

    <!--    <LinearLayout
            android:id="@+id/linear1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp">

            <RadioButton
                android:id="@+id/radiohappy"
                android:drawableRight="@drawable/happiness"
                android:drawablePadding="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/happy"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radionotsad"
                android:drawableRight="@drawable/sadness"
                android:drawablePadding="25dp"
                android:paddingLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sad" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="50dp"
            android:layout_below="@+id/linear1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp">

            <RadioButton
                android:id="@+id/radioangry"
                android:drawableRight="@drawable/anger"
                android:drawablePadding="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angry" />

            <RadioButton
                android:id="@+id/radiodisgust"
                android:drawableRight="@drawable/disgust"
                android:drawablePadding="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disgust" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp">

            <RadioButton
                android:id="@+id/radionotsurprise"
                android:drawableRight="@drawable/surprise"
                android:drawablePadding="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surprise" />

            <RadioButton
                android:id="@+id/radiofear"
                android:drawableRight="@drawable/fear"
                android:drawablePadding="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fear" />

        </LinearLayout>-->


    <!--    <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/fear" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/fear" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/fear" />
            </LinearLayout>
        </RadioGroup>-->


    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >

            <RadioButton
                android:id="@+id/radiohappy"
                android:drawablePadding="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/happy"
                android:checked="true"
                android:paddingRight="15dp"/>

            <RadioButton
                android:id="@+id/radionotsad"
                android:drawablePadding="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sad"
                android:paddingRight="15dp"/>

            <RadioButton
                android:id="@+id/radioangry"
                android:drawablePadding="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angry"
                android:paddingRight="15dp"/>


            <RadioButton
                android:id="@+id/radiodisgust"
                android:drawablePadding="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disgust"
                android:paddingRight="15dp"/>

            <RadioButton
                android:id="@+id/radionotsurprise"
                android:drawablePadding="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surprise"
                android:paddingRight="15dp"/>

            <RadioButton
                android:id="@+id/radiofear"
                android:drawablePadding="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fear"
                android:paddingRight="15dp"/>

    </RadioGroup>

    <Button
        android:text="Send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:textSize="24sp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:id="@+id/imageView3"
        app:srcCompat="@drawable/sixemotions"
        android:layout_below="@+id/radio"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button3" />

    <!--<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/sadness"
        android:layout_alignTop="@+id/imageView6"
        android:layout_toRightOf="@+id/imageView6"
        android:layout_toEndOf="@+id/imageView6"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:id="@+id/imageView7" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/disgust"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:id="@+id/imageView5"
        android:layout_alignTop="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/anger"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:id="@+id/imageView4"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/fear"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:id="@+id/imageView6"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView5"
        android:layout_toEndOf="@+id/imageView5" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/surprise"
        android:layout_alignTop="@+id/imageView7"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:id="@+id/imageView8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/happiness"
        android:id="@+id/imageView3"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />-->


</RelativeLayout>
